# fr24_ha

./: .gitignore  README.md  ROADMAP.md  dashboard_example.yaml  hacs.json  pyproject.toml
.github/workflows/: lint.yml  release.yml
custom_components/fr24_tracker/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  fr24-map-card.js  manifest.json  sensor.py  strings.json  util.py
custom_components/fr24_tracker/blueprints/: low_altitude_alert.yaml  watched_aircraft_alert.yaml
custom_components/fr24_tracker/translations/: en.json
